[package]
name = "zcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
infer = "0.19.0"

[package.metadata.deb]
maintainer = "Aha Ha <ahawespe[at]gmail.com>"
copyright = "2026, Aha Ha"
extended-description = """\
Detect and decompress different file types\
"""
section = "utils"
priority = "optional"
depends = "$auto, tar, unzip, zstd, lz4"

assets = [
    ["target/release/zcrab", "usr/bin/zcrab", "755"],
]